.metals/.reports/metals/2023-09-04/r_scala-toplevel-mtags_13-07-55-131
id: file:///C:/Users/Saffy%20Yawar/Scala-Chisel-Learning-Journey/src/main/scala/gcd/Lab6/Ex4.scala:[72..79) in Input.VirtualFile("file:///C:/Users/Saffy%20Yawar/Scala-Chisel-Learning-Journey/src/main/scala/gcd/Lab6/Ex4.scala", "package Lab6

import chisel3 . _
import chisel3 . util . _

class  extends Module {
val io = IO ( new Bundle {
val in = Flipped ( Decoupled ( UInt (8. W ) ) ) // valid = Input , bits = Input
val out = Decoupled ( UInt (8. W ) ) // valid = Output , bits = Output
})
val queueA = Queue(io.in,6)
val  queueB = Queue (queueA,6)
}
//println ( chisel3 . Driver . emitVerilog (new Pipe ) )


")
file:///C:/Users/Saffy%20Yawar/Scala-Chisel-Learning-Journey/src/main/scala/gcd/Lab6/Ex4.scala:6: error: expected identifier; obtained extends
class  extends Module {
       ^